# kubisat_firmware

./: .clang-uml  CMakeLists.txt  ISensor.cpp  ISensor.h  all_sensors_test.cpp  build_number.h  commands.cpp  commands.h  communication.cpp  communication.h  config.h  credits.md  doxyfile  eeprom.cpp  event_manager.cpp  event_manager.h  filter-deps.py  filtered_deps.dot  filtered_deps2.dot  gps_data.cpp  gps_data.h  graph-doxyfile  groups.ori  includes.h  logging.cpp  main.cpp  pin_config.cpp  pin_config.h  protocol.h  refactor.md  run-cland-tidy.py  storage.cpp  storage.h  todo.md  utils.cpp  utils.h
.PVS-Studio/State/: WindowState.json
cmake/: CMakeBuildNumberCache.txt  documentation.cmake
commands/: clock_commands.cpp  commands.cpp  commands.h  diagnostic_commands.cpp  event_commands.cpp  gps_commands.cpp  power_commands.cpp
frame_model/: communication.cpp  communication.h  frame.cpp  groups.cpp  groups.h  protocol.h  receive.cpp  send.cpp  utils_converters.cpp
lib/: GPSData.h  ISensor.cpp  pin_config.cpp  pin_config.h  system_state_manager.cpp  system_state_manager.h  utils.cpp  utils.h
lib/BH1750/: BH1750.cpp  BH1750_WRAPPER.cpp  BH1750_WRAPPER.h  CMakeLists.txt
lib/BME280/: BME280_WRAPPER.cpp  BME280_WRAPPER.h  CMakeLists.txt
lib/DS3231/: CMakeLists.txt  DS3231.cpp  DS3231.h  DS3231_WRAPPER.cpp  DS3231_WRAPPER.h
lib/FatFs_SPI/: CMakeLists.txt
lib/FatFs_SPI/sd_driver/: hw_config.c  sd_card.c
lib/GPS/: gps_collector.cpp  gps_collector.h
lib/GPS/NMEA/: NMEA_data.cpp  NMEA_data.h  NMEA_parser.cpp  NMEA_parser.h
lib/HMC5883L/: CMakeLists.txt  HMC5883L.h  HMC5883L_WRAPPER.cpp  HMC5883L_WRAPPER.h
lib/INA3221/: CMakeLists.txt  INA3221.cpp  INA3221.h  INA3221_WRAPPER.cpp  INA3221_WRAPPER.h
lib/LoRa/: CMakeLists.txt  LoRa-RP2040.cpp  LoRa-RP2040.h
lib/MPU6050/: CMakeLists.txt  MPU6050_WRAPPER.h
lib/NEO6V2/: CMakeLists.txt
lib/PowerManager/: CMakeLists.txt  PowerManager.cpp  PowerManager.h
lib/SD_MICRO/: CMakeLists.txt
lib/clock/: CMakeLists.txt  DS3231.cpp  DS3231.h  ErriezDS3231.cpp
lib/comms/: CMakeLists.txt  communication.cpp  communication.h  frame.cpp  protocol.h  receive.cpp  send.cpp  utils_converters.cpp
lib/comms/LoRa/: CMakeLists.txt  LoRa-RP2040.cpp  LoRa-RP2040.h
lib/comms/commands/: CMakeLists.txt  clock_commands.cpp  commands.cpp  commands.h  diagnostic_commands.cpp  event_commands.cpp  gps_commands.cpp  power_commands.cpp  sensor_commands.cpp  storage_commands.cpp  storage_commands_utils.cpp  storage_commands_utils.h  telemetry_commands.cpp
lib/eventman/: CMakeLists.txt  event_manager.cpp  event_manager.h
lib/location/: gps_collector.cpp  gps_collector.h
lib/location/NMEA/: NMEA_data.cpp  NMEA_data.h
lib/powerman/: CMakeLists.txt  PowerManager.cpp  PowerManager.h
lib/powerman/INA3221/: ALERTS.TXT  INA3221.cpp  INA3221.h
lib/sensors/: CMakeLists.txt  ISensor.cpp  ISensor.h
lib/sensors/BH1750/: BH1750.cpp  BH1750.h  BH1750_WRAPPER.cpp  BH1750_WRAPPER.h  CMakeLists.txt
lib/sensors/BME280/: BME280.cpp  BME280.h  BME280_WRAPPER.cpp  BME280_WRAPPER.h  CMakeLists.txt
lib/sensors/HMC5883L/: CMakeLists.txt  HMC5883L.cpp  HMC5883L.h  HMC5883L_WRAPPER.cpp  HMC5883L_WRAPPER.h
lib/sensors/MPU6050/: CMakeLists.txt  MPU6050_WRAPPER.h
lib/storage/: CMakeLists.txt  storage.cpp  storage.h
lib/storage/pico-vfs/: CMakeLists.txt
lib/storage/pico-vfs/include/filesystem/: filesystem.h
lib/storage/pico-vfs/src/filesystem/: fat.c  vfs.c
lib/telemetry/: CMakeLists.txt  telemetry_manager.cpp  telemetry_manager.h
lib/utils/: CMakeLists.txt  utils.h
release/: main.uf2  main_v295.uf2  main_v304.uf2  main_v310.uf2  main_v321.uf2  main_v322.uf2  main_v323.uf2  main_v326.uf2  main_v328.uf2  main_v329.uf2  main_v330.uf2  main_v331.uf2  main_v332.uf2  main_v333.uf2  main_v334.uf2  main_v335.uf2  main_v336.uf2  main_v341.uf2  main_v342.uf2  main_v343.uf2  main_v344.uf2  main_v345.uf2  main_v346.uf2  main_v348.uf2  main_v350.uf2  main_v351.uf2  main_v352.uf2  main_v353.uf2  main_v354.uf2  main_v357.uf2  main_v358.uf2  main_v359.uf2  main_v361.uf2  main_v362.uf2  main_v363.uf2  main_v364.uf2  main_v366.uf2  main_v371.uf2  main_v375.uf2  main_v378.uf2  (+103 more)
release/doc/docbook/: _b_h1750_8cpp.xml  _b_h1750_8cpp_source.xml  _b_h1750_8h.xml  _b_h1750_8h_source.xml  _b_h1750___w_r_a_p_p_e_r_8cpp.xml  _b_h1750___w_r_a_p_p_e_r_8cpp_source.xml  _b_h1750___w_r_a_p_p_e_r_8h.xml  _b_h1750___w_r_a_p_p_e_r_8h_source.xml  _b_m_e280_8cpp.xml  _b_m_e280_8cpp_source.xml  _b_m_e280_8h.xml  _b_m_e280_8h_source.xml  _b_m_e280___w_r_a_p_p_e_r_8cpp.xml  _b_m_e280___w_r_a_p_p_e_r_8cpp_source.xml  _b_m_e280___w_r_a_p_p_e_r_8h.xml  _b_m_e280___w_r_a_p_p_e_r_8h_source.xml  _d_s3231_8cpp.xml  _d_s3231_8cpp_source.xml  _d_s3231_8h.xml  _d_s3231_8h_source.xml  _h_m_c5883_l_8cpp.xml  _h_m_c5883_l_8cpp_source.xml  _h_m_c5883_l_8h.xml  _h_m_c5883_l_8h_source.xml  _h_m_c5883_l___w_r_a_p_p_e_r_8cpp.xml  _h_m_c5883_l___w_r_a_p_p_e_r_8cpp_source.xml  _h_m_c5883_l___w_r_a_p_p_e_r_8h.xml  _h_m_c5883_l___w_r_a_p_p_e_r_8h_source.xml  _i_n_a3221_8cpp.xml  _i_n_a3221_8cpp_source.xml  _i_n_a3221_8h.xml  _i_n_a3221_8h_source.xml  _i_sensor_8cpp.xml  _i_sensor_8cpp_source.xml  _i_sensor_8h.xml  _i_sensor_8h_source.xml  _lo_ra-_r_p2040_8cpp.xml  _lo_ra-_r_p2040_8cpp_source.xml  (+123 more)
scripts/: commands.json  generate_commands.py  generate_include_graph.py
src/: groups.cpp
telemetry_test/: event_log.csv  kubisat_trajectory_20250319_224737.kml  kubisat_trajectory_20250320_104918.kml  kubisat_trajectory_20250320_120007.kml  kubisat_trajectory_20250322_111439.kml  log.txt  sensors.csv  telemetry.csv
test/: CMakeLists.txt  test_clock.cpp  test_example.cpp  test_frame.cpp  test_mocks.cpp  test_powerman.cpp  test_runner.cpp
test/comms/: test_comand_handlers.cpp  test_converters.cpp  test_error_codes.cpp  test_frame_build.cpp  test_frame_coding.cpp  test_frame_common.h  test_frame_send.cpp
test/comms/commands/: test_diagnostic_commands.cpp
test/mocks/: hardware_mocks.cpp  hardware_mocks.h
tests/: CMakeLists.txt  test_sensors.cpp
tests/MOCK_BME280/: MOCK_BME280.cpp
(+2306 files in other folders)
